# gogmail

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  PACKAGING.md  README.md  SECURITY.md  catalog-info.yaml  devenv.nix  flake.nix  home-manager-module.nix  nixos-module.nix  nixos_install.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Gemfile  _config.yml  blog.html  index.html
docs/_layouts/: default.html  post.html
docs/_posts/: 2026-06-10-building-gogmail-with-claude-code.md  2026-06-10-reliability-and-bug-hunting.md  2026-06-13-a-morning-with-gogmail-hands-free.md
docs/assets/css/: style.css
packaging/: build.sh  gogmail.launcher  nfpm.yaml
src/gogmail/: __init__.py  app.py  gemini_api.py  gog_api.py  images.py  llm.py  voice.py  zoom_api.py
src/gogmail/tui/: __init__.py  screens.py  styles.tcss  widgets.py
tests/: test_ai_tools.py  test_ai_write_tools.py  test_backup.py  test_calendar_multical.py  test_contacts_crud.py  test_drive_preview.py  test_email_images.py  test_gemini_api.py  test_gmail_attachments.py  test_gmail_pagination.py  test_gog_api.py  test_groups.py  test_helpers.py  test_keep.py  test_llm_provider.py  test_niche_services.py  test_photos_thumbnails.py  test_read_tools.py  test_sheets_edit.py  test_tasks_feature.py  test_ui_smoke.py  test_voice.py  test_zoom_api.py
