[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gogmail"
version = "1.5.0"
description = "Modern TUI Client for Google Workspace using gog CLI and Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "rich-pixels>=3.0.0",
    "pillow>=10.0.0"
]

[project.scripts]
gogmail = "gogmail.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gogmail = ["tui/*.tcss"]
